--- a/jqr.html
+++ b/jqr.html
@@ -128,5 +128,23 @@
             <input type="button" value="发送" class="btn">
         </div>
     </div>
+    <div class="zong">
+        <div class="head">
+            <h2>小邓同学</h2>
+            <img src="新建文件夹\月球.svg" alt="" class="touxiang">
+        </div>
+        <div class="body">
+            <ul class="chart">
+                <li class="jq"><img src="新建文件夹\月球.svg" alt=""><span class="jqr">你好先生</span></li>
+                <li class="user"><span class="ren">我是不是你最爱的人</span><img src="新建文件夹\黎明.svg" alt=""></li>
+            </ul>
+
+        </div>
+        <div class="end">
+            <img src="新建文件夹\黎明.svg" alt="" class="use">
+            <input type="text" class="sendin">
+            <input type="button" value="发送" class="btn">
+        </div>
+    </div>
 </body>
 </html>
